--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title=""
-    BackgroundImageSource="background3.jpg">
+    >
 
     <Grid>
         <!--  Content Grid  -->
@@ -35,12 +35,7 @@
                     VerticalOptions="CenterAndExpand" />
                 <!--  Spacer  -->
                 <BoxView BackgroundColor="Transparent" HorizontalOptions="FillAndExpand" />
-                <Label
-                    Margin="0,0,30,0"
-                    FontAttributes="Bold"
-                    Text="SITE VISITOR APP"
-                    TextColor="White"
-                    VerticalOptions="CenterAndExpand" />
+
             </StackLayout>
         </Frame>
 
@@ -80,7 +75,8 @@
                         <Button
                             x:Name="btnTomarFoto"
                             Margin="10,0,0,20"
-                            BackgroundColor="{DynamicResource TealPrimary}"
+                            BackgroundColor="Gray"
+                            BorderColor="Black"
                             Clicked="btnTomarFoto_Clicked"
                             CornerRadius="20"
                             FontSize="12"
@@ -185,7 +181,8 @@
                 <Button
                     x:Name="btnAgregar"
                     Margin="10,0,0,0"
-                    BackgroundColor="{DynamicResource TealPrimary}"
+                    BackgroundColor="Gray"
+                    BorderColor="Black"
                     Clicked="btnAgregar_Clicked"
                     CornerRadius="20"
                     FontSize="12"
@@ -196,7 +193,8 @@
                 <Button
                     x:Name="btnListaSitios"
                     Margin="10,0,10,0"
-                    BackgroundColor="{DynamicResource TealPrimary}"
+                    BackgroundColor="Gray"
+                    BorderColor="Black"
                     Clicked="btnListaSitios_Clicked"
                     CornerRadius="20"
                     FontSize="12"
@@ -207,7 +205,8 @@
                 <Button
                     x:Name="btnSalir"
                     Margin="0,0,10,0"
-                    BackgroundColor="{DynamicResource TealPrimary}"
+                    BackgroundColor="Gray"
+                    BorderColor="Black"
                     Clicked="btnSalir_Clicked"
                     CornerRadius="20"
                     FontSize="12"
