--- a/Views/listaSitios.xaml
+++ b/Views/listaSitios.xaml
@@ -1,47 +1,42 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="PM2E15044.Views.listaSitios"
-    <?xml version="1.0" encoding="utf-8" ?>
-    <ContentPage
-    x:Class="PM2E15044.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:avatarview="clr-namespace:Syncfusion.Maui.Core;assembly=Syncfusion.Maui.Core"
     xmlns:convert="clr-namespace:PM2E15044.Controllers"
     Title=""
     >
+    <ContentPage.Resources>
+        <convert:base64Image x:Key="BaseArray" />
+    </ContentPage.Resources>
 
-        <ContentPage.Resources>
-            <convert:base64Image x:Key="BaseArray" />
-        </ContentPage.Resources>
+    <Grid>
+        <!--  Content Grid  -->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-        <Grid>
-            <!--  Content Grid  -->
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-
-            <Frame
+        <Frame
             Grid.Row="0"
             Margin="0,0,0,15"
             Padding="0,10,0,10"
             BackgroundColor="black"
             BorderColor="{DynamicResource TealPrimary}"
             CornerRadius="20">
-                <StackLayout
+            <StackLayout
                 Grid.Row="0"
                 Margin="0,0,0,0"
                 Padding="0,0,0,0"
                 BackgroundColor="Transparent"
                 Orientation="Horizontal">
 
-                    <Button
+                <Button
                     x:Name="btnSalir"
                     Margin="20,0,0,0"
-                    BackgroundColor="Gray"
-                    BorderColor="Black"
+                    BackgroundColor="{DynamicResource TealPrimary}"
                     Clicked="btnSalir_Clicked"
                     CornerRadius="20"
                     FontSize="12"
@@ -50,42 +45,42 @@
                     TextColor="White"
                     WidthRequest="90" />
 
-                    <BoxView BackgroundColor="Transparent" HorizontalOptions="FillAndExpand" />
+                <BoxView BackgroundColor="Transparent" HorizontalOptions="FillAndExpand" />
 
-                    <Label
+                <Label
                     Margin="0,0,30,0"
                     FontAttributes="Bold"
                     Text="LISTA DE SITIOS VISITADOS"
                     TextColor="White"
                     VerticalOptions="CenterAndExpand" />
-                </StackLayout>
-            </Frame>
+            </StackLayout>
+        </Frame>
 
 
-            <!--  Body: Collection View  -->
-            <ScrollView Grid.Row="1">
-                <StackLayout>
-                    <CollectionView
+        <!--  Body: Collection View  -->
+        <ScrollView Grid.Row="1">
+            <StackLayout>
+                <CollectionView
                     x:Name="listUbicacion"
                     Margin="10,5,10,5"
                     BackgroundColor="Transparent"
                     SelectionMode="None">
-                        <CollectionView.ItemTemplate>
-                            <DataTemplate>
-                                <Grid
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid
                                 x:Name="gridSitios"
                                 Margin="0,10,0,10"
                                 BackgroundColor="Transparent">
-                                    <Grid.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
-                                    </Grid.GestureRecognizers>
+                                <Grid.GestureRecognizers>
+                                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
+                                </Grid.GestureRecognizers>
 
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="auto" />
-                                        <ColumnDefinition Width="*" />
-                                    </Grid.ColumnDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
 
-                                    <Frame
+                                <Frame
                                     Margin="10,10,0,10"
                                     Padding="0"
                                     BorderColor="{DynamicResource TealPrimary}"
@@ -95,14 +90,14 @@
                                     HorizontalOptions="Center"
                                     IsClippedToBounds="True"
                                     WidthRequest="80">
-                                        <Frame.GestureRecognizers>
-                                            <TapGestureRecognizer
+                                    <Frame.GestureRecognizers>
+                                        <TapGestureRecognizer
                                             x:Name="TapGestureFoto"
                                             CommandParameter="verFoto"
                                             Tapped="TapGestureFoto_Tapped" />
-                                        </Frame.GestureRecognizers>
+                                    </Frame.GestureRecognizers>
 
-                                        <Image
+                                    <Image
                                         Aspect="AspectFill"
                                         HeightRequest="80"
                                         HorizontalOptions="EndAndExpand"
@@ -110,10 +105,10 @@
                                         Source="{Binding imagen, Converter={StaticResource BaseArray}}"
                                         VerticalOptions="CenterAndExpand"
                                         WidthRequest="80" />
-                                    </Frame>
+                                </Frame>
 
 
-                                    <Label
+                                <Label
                                     Grid.Column="1"
                                     Margin="10,0,10,10"
                                     FontAttributes="Bold"
@@ -122,47 +117,46 @@
                                     TextColor="White"
                                     VerticalOptions="CenterAndExpand" />
 
-                                    <VisualStateManager.VisualStateGroups>
-                                        <VisualStateGroup x:Name="CommonStates">
-                                            <VisualState x:Name="Normal">
-                                                <VisualState.Setters>
-                                                    <Setter Property="BackgroundColor" Value="{DynamicResource BlackWithTransparency}" />
-                                                </VisualState.Setters>
-                                            </VisualState>
-                                            <VisualState x:Name="Selected">
-                                                <VisualState.Setters>
-                                                    <Setter Property="BackgroundColor" Value="{DynamicResource Accent}" />
-                                                </VisualState.Setters>
-                                            </VisualState>
-                                        </VisualStateGroup>
-                                    </VisualStateManager.VisualStateGroups>
-                                </Grid>
-                            </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                    </CollectionView>
-                </StackLayout>
-            </ScrollView>
+                                <VisualStateManager.VisualStateGroups>
+                                    <VisualStateGroup x:Name="CommonStates">
+                                        <VisualState x:Name="Normal">
+                                            <VisualState.Setters>
+                                                <Setter Property="BackgroundColor" Value="{DynamicResource BlackWithTransparency}" />
+                                            </VisualState.Setters>
+                                        </VisualState>
+                                        <VisualState x:Name="Selected">
+                                            <VisualState.Setters>
+                                                <Setter Property="BackgroundColor" Value="{DynamicResource Accent}" />
+                                            </VisualState.Setters>
+                                        </VisualState>
+                                    </VisualStateGroup>
+                                </VisualStateManager.VisualStateGroups>
+                            </Grid>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </StackLayout>
+        </ScrollView>
 
-            <!--  Botones Inferiores  -->
-            <Frame
+        <!--  Botones Inferiores  -->
+        <Frame
             Grid.Row="2"
             Margin="0,0,0,0"
             Padding="0,10,0,10"
             BackgroundColor="Black"
             BorderColor="{DynamicResource TealPrimary}"
             CornerRadius="20">
-                <StackLayout
+            <StackLayout
                 Margin="0,0,0,0"
                 Padding="0,0,0,0"
                 BackgroundColor="Transparent"
                 Orientation="Horizontal">
 
 
-                    <Button
+                <Button
                     x:Name="btnEliminar"
                     Margin="20,0,5,0"
-                    BackgroundColor="Gray"
-                    BorderColor="Black"
+                    BackgroundColor="{DynamicResource TealPrimary}"
                     Clicked="btnEliminar_Clicked"
                     CommandParameter="{Binding .}"
                     CornerRadius="20"
@@ -172,11 +166,10 @@
                     TextColor="White"
                     WidthRequest="100" />
 
-                    <Button
+                <Button
                     x:Name="btnActualizar"
                     Margin="10,0,5,0"
-                    BackgroundColor="Gray"
-                    BorderColor="Black"
+                    BackgroundColor="{DynamicResource TealPrimary}"
                     Clicked="btnActualizar_Clicked"
                     CornerRadius="20"
                     FontSize="12"
@@ -185,11 +178,10 @@
                     TextColor="White"
                     WidthRequest="110" />
 
-                    <Button
+                <Button
                     x:Name="btnVerMaps"
                     Margin="10,0,5,0"
-                    BackgroundColor="Gray"
-                    BorderColor="Black"
+                    BackgroundColor="{DynamicResource TealPrimary}"
                     Clicked="btnVerMaps_Clicked"
                     CornerRadius="20"
                     FontSize="12"
@@ -197,8 +189,8 @@
                     Text="Ver Mapa"
                     TextColor="White"
                     WidthRequest="110" />
-                </StackLayout>
-            </Frame>
+            </StackLayout>
+        </Frame>
 
-        </Grid>
-    </ContentPage>
+    </Grid>
+</ContentPage>
