--- a/Views/verMapa.xaml
+++ b/Views/verMapa.xaml
@@ -4,8 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:maps="http://schemas.microsoft.com/dotnet/2021/maui/maps"
-    Title=""
-    >
+    Title="">
     <Grid>
         <!--  Content Grid  -->
         <Grid.RowDefinitions>
@@ -14,25 +13,26 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
+        <!-- Header -->
         <Frame
             Grid.Row="0"
             Margin="0,0,0,15"
             Padding="0,10,0,10"
-            BackgroundColor="black"
-            BorderColor="{DynamicResource TealPrimary}"
+            BackgroundColor="Gray"
+            BorderColor="Black"
             CornerRadius="20">
             <StackLayout Grid.Row="0">
-                <!--  Boton Regresar  -->
+                <!-- Boton Regresar -->
                 <StackLayout
                     Margin="0,0,0,0"
                     Padding="0,0,0,0"
                     BackgroundColor="Transparent"
                     Orientation="Horizontal">
-
                     <Button
                         x:Name="btnSalir"
                         Margin="20,0,0,0"
-                        BackgroundColor="{DynamicResource TealPrimary}"
+                        BackgroundColor="Gray"
+                        BorderColor="Black"
                         Clicked="btnSalir_Clicked"
                         CornerRadius="20"
                         FontSize="12"
@@ -40,9 +40,7 @@
                         Text="Atras"
                         TextColor="White"
                         WidthRequest="90" />
-
                     <BoxView BackgroundColor="Transparent" HorizontalOptions="FillAndExpand" />
-
                     <Label
                         x:Name="labelSitio"
                         Margin="0,0,30,0"
@@ -54,14 +52,12 @@
             </StackLayout>
         </Frame>
 
-
-
-        <!--  Body: Collection View  -->
+        <!-- Body: Collection View -->
         <ScrollView Grid.Row="1">
             <Frame
                 Margin="10,10,10,10"
-                BackgroundColor="{DynamicResource BlackWithTransparency}"
-                BorderColor="{DynamicResource TealPrimary}"
+                BackgroundColor="Gray"
+                BorderColor="Black"
                 HorizontalOptions="FillAndExpand"
                 VerticalOptions="FillAndExpand">
                 <StackLayout>
@@ -71,20 +67,20 @@
                         HeightRequest="500"
                         IsShowingUser="True">
                         <maps:Map.Pins>
-                            <!--  Pins will be added dynamically in code-behind  -->
+                            <!-- Pins will be added dynamically in code-behind -->
                         </maps:Map.Pins>
                     </maps:Map>
                 </StackLayout>
             </Frame>
-
         </ScrollView>
 
+        <!-- Botones inferiores -->
         <Frame
             Grid.Row="2"
             Margin="0,0,0,0"
             Padding="0,10,0,10"
-            BackgroundColor="Black"
-            BorderColor="{DynamicResource TealPrimary}"
+            BackgroundColor="Gray"
+            BorderColor="Black"
             CornerRadius="20">
             <StackLayout
                 Margin="0,0,0,0"
@@ -94,7 +90,8 @@
                 <Button
                     x:Name="btnShare"
                     Margin="10,0,5,0"
-                    BackgroundColor="{DynamicResource TealPrimary}"
+                    BackgroundColor="Gray"
+                    BorderColor="Black"
                     Clicked="btnShare_Clicked"
                     CornerRadius="20"
                     FontSize="12"
@@ -104,7 +101,5 @@
                     TextColor="White" />
             </StackLayout>
         </Frame>
-        <!--  Button for sharing  -->
-
     </Grid>
 </ContentPage>
